--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,6 +47,7 @@ set(zyemu_SOURCES
 	"src/zyemu/codecache.cpp"
 	"src/zyemu/codecache.hpp"
 	"src/zyemu/codegen.cpp"
+	"src/zyemu/codegen.handlers.cpp"
 	"src/zyemu/codegen.hpp"
 	"src/zyemu/cpu.cpp"
 	"src/zyemu/immediate.hpp"
