Re-arrange things a bit

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,19 +44,16 @@ set(zyemu_SOURCES
 	"include/zyemu/zyemu.hpp"
 	"src/zyemu/assembler.cpp"
 	"src/zyemu/assembler.hpp"
+	"src/zyemu/assembler.types.hpp"
 	"src/zyemu/codecache.cpp"
 	"src/zyemu/codecache.hpp"
 	"src/zyemu/codegen.cpp"
 	"src/zyemu/codegen.handlers.cpp"
 	"src/zyemu/codegen.hpp"
 	"src/zyemu/cpu.cpp"
-	"src/zyemu/immediate.hpp"
 	"src/zyemu/internal.hpp"
-	"src/zyemu/label.hpp"
-	"src/zyemu/memory.hpp"
 	"src/zyemu/platform.cpp"
 	"src/zyemu/platform.hpp"
-	"src/zyemu/registers.cpp"
 	"src/zyemu/thread.cpp"
 	"src/zyemu/thread.hpp"
 )
