--- a/cmake.toml
+++ b/cmake.toml
@@ -17,17 +17,14 @@ sources = [
     "src/zyemu/codegen.handlers.cpp",
     "src/zyemu/cpu.cpp",
     "src/zyemu/platform.cpp",
-    "src/zyemu/registers.cpp",
     "src/zyemu/thread.cpp",
 ]
 headers = [
+    "include/zyemu/registers.hpp",
     "include/zyemu/types.hpp",
     "include/zyemu/zyemu.hpp",
-    "include/zyemu/registers.hpp",
-    "src/zyemu/memory.hpp",
-    "src/zyemu/label.hpp",
-    "src/zyemu/immediate.hpp",
     "src/zyemu/assembler.hpp",
+    "src/zyemu/assembler.types.hpp",
     "src/zyemu/codecache.hpp",
     "src/zyemu/codegen.hpp",
     "src/zyemu/internal.hpp",
