--- a/cmake.toml
+++ b/cmake.toml
@@ -53,6 +53,7 @@ sources = [
     "src/tests/main.cpp",
     "src/tests/testdata.cpp",
     "src/tests/tests/emulation.cpp",
+    "src/tests/tests/emulation.jcc.cpp",
     "src/tests/tests/emulation.testdata.cpp",
     "src/tests/tests/registers.cpp",
 ]
